# openops-template

./: README.md  pyproject.toml
openops_core/: utils.py
openops_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
